160425 variableNames made meaningful and restructured some objects

--- a/public/locales/ar/about.json
+++ b/public/locales/ar/about.json
@@ -3,8 +3,8 @@
     "cmnBannerTitle": "عن المؤسس"
   },
   "ourValue": {
-    "heading1": "أفضل روضة <break /> لطفلك",
-    "heading2": "قيمنا"
+    "mainHeading": "أفضل روضة <break /> لطفلك",
+    "sectionTitle": "قيمنا"
   },
   "counter": {
     "experience": "سنة من الخبرة",
