--- a/public/locales/ar/home.json
+++ b/public/locales/ar/home.json
@@ -1,143 +1,166 @@
 {
   "banner": {
-    "heading1": {
-      "span1": "ثلاثة برامج",
-      "span2": "تعليمية",
-      "span3": "مترابطة"
+    "mainHeading": {
+      "part1": "ثلاثة برامج",
+      "part2": "تعليمية",
+      "part3": "مترابطة"
     },
-    "heading2": "أكاديمية اليقين",
+    "subHeading": "أكاديمية اليقين",
     "description": "قاعدة اللغة العربية والقرآن، الدراسات الإسلامية، الأدعية الأساسية وحفظ السور",
-    "applyBtn": "تقدم اليوم",
-    "timetableBtn": "جدول صلاة شهر يناير",
-    "videoPlayBtn": "تشغيل الفيديو"
+    "buttons": {
+      "apply": "تقدم اليوم",
+      "timetable": "جدول صلاة شهر يناير",
+      "playVideo": "تشغيل الفيديو"
+    }
   },
   "programs": {
-    "heading1": "نقابل الأطفال حسب مستواهم <break />بغض النظر عن أعمارهم",
-    "heading2": "برامجنا",
-    "age": "العمر",
-    "weekly": "أسبوعيًا",
-    "time": "الوقت",
-    "years": "5-15 سنة",
-    "days": "2-4 أيام",
-    "hrs": "4-6 ساعات",
-    "program1": {
-      "title1": "قاعدة عربية، القرآن والحفظ",
-      "description1": "قال الله سبحانه وتعالى في القرآن: 'ورتل القرآن ترتيلاً'..."
+    "mainHeading": "نقابل الأطفال حسب مستواهم <break />بغض النظر عن أعمارهم",
+    "sectionTitle": "برامجنا",
+    "details": {
+      "ageLabel": "العمر",
+      "weeklyLabel": "أسبوعيًا",
+      "timeLabel": "الوقت",
+      "ageRange": "5-15 سنة",
+      "daysPerWeek": "2-4 أيام",
+      "hoursPerWeek": "4-6 ساعات"
     },
-    "program2": {
-      "title2": "الرياضيات، الإنجليزية والعلوم",
-      "description2": "في أكاديمية اليقين لدينا مجموعة من المعلمين المتخصصين. يسعى معلمونا جاهدين إلى ..."
-    },
-    "program3": {
-      "title3": "اللغة العربية",
-      "description3": "الإسلام ليس مجرد دين يتبعه المسلمون، بل هو أسلوب حياة. عندما يولد الإنسان..."
-    }
+    "programList": [
+      {
+        "title": "قاعدة عربية، القرآن والحفظ",
+        "description": "قال الله سبحانه وتعالى في القرآن: 'ورتل القرآن ترتيلاً'..."
+      },
+      {
+        "title": "الرياضيات، الإنجليزية والعلوم",
+        "description": "في أكاديمية اليقين لدينا مجموعة من المعلمين المتخصصين. يسعى معلمونا جاهدين إلى ..."
+      },
+      {
+        "title": "اللغة العربية",
+        "description": "الإسلام ليس مجرد دين يتبعه المسلمون، بل هو أسلوب حياة. عندما يولد الإنسان..."
+      }
+    ]
   },
+
   "workProcess": {
-    "title1": "الجلسات والمواعيد",
-    "description1": "تُعقد دروسنا الحضورية من الإثنين إلى الخميس خلال أيام الأسبوع، وفي يومي السبت والأحد خلال عطلة نهاية الأسبوع.",
-    "title2": "هيكل الرسوم",
-    "description2": "يعتمد هيكل الرسوم على نوع الدورة والجلسة. لدينا نوعان من الجلسات: أيام الأسبوع وعطلات نهاية الأسبوع.",
-    "title3": "العطل والتقويم الأكاديمي",
-    "description3": "تعتمد العطل والتقويم الأكاديمي على نوع الجلسة. لدينا نوعان من الجلسات: أيام الأسبوع وعطلات نهاية الأسبوع."
-  },
-  "whyChooseUs": {
-    "heading1": "الخيار الأفضل للأطفال",
-    "heading2": "لماذا تختارنا",
-    "feature1": "أدوات تعليمية حديثة",
-    "feature2": "مجموعات صغيرة، تركيز أفضل",
-    "feature3": "تحديثات منتظمة للتقدم",
-    "feature4": "تقارير فصلية للآباء",
-    "feature5": "تعليم القرآن مع التجويد",
-    "feature6": "بيئة ممتعة وودية"
-  },
-  "feeStructure": {
-    "heading1": "أكاديمية اليقين<break />الصفوف وهيكل الرسوم",
-    "heading2": "الصفوف وهيكل الرسوم",
-    "title1": "المادة",
-    "title2": "صفوف أيام الأسبوع",
-    "title3": "صفوف عطلة نهاية الأسبوع",
-    "subject1": {
-      "sub1Title": "القاعدة، القرآن والدراسات الإسلامية",
-      "weekdays1": {
-        "dayPerHour1": "£1.85<sm>/في الساعة</sm>",
-        "dayPerMonth1": "£50<sm>/في الشهر</sm>",
-        "dayDays1": "الاثنين - الخميس",
-        "dayDuration1": "٤:٣٠ - ٦:٠٠م / ٥:٤٥ - ٧:١٥م"
-      },
-      "weekends1": {
-        "endPerHour1": "£1.70<sm>/في الساعة</sm>",
-        "endPerMonth1": "£50<sm>/في الشهر</sm>",
-        "endDays1": "السبت - الأحد",
-        "endDuration1": "١٠ص - ١٢:٣٠م / ١٢:٣٠ - ٢:٣٠م"
-      }
+    "sessions": {
+      "title": "الجلسات والمواعيد",
+      "description": "تُعقد دروسنا الحضورية من الإثنين إلى الخميس خلال أيام الأسبوع، وفي يومي السبت والأحد خلال عطلة نهاية الأسبوع."
     },
-    "subject2": {
-      "sub2Title": "دروس رياضيات وإنجليزي للمرحلة الابتدائية",
-      "weekdays2": {
-        "dayPerHour2": "£5<sm>/في الساعة</sm>",
-        "dayPerMonth2": "£100<sm>/في الشهر</sm>",
-        "dayDays2": "الاثنين - الثلاثاء",
-        "dayDuration2": "٥ - ٧م"
-      },
-      "weekends2": {
-        "endPerHour2": "£4.44<sm>/في الساعة</sm>",
-        "endPerMonth2": "£80<sm>/في الشهر</sm>",
-        "endDays2": "السبت - الأحد",
-        "endDuration2": "١٠ص - ١٢م"
-      }
+    "feeStructure": {
+      "title": "هيكل الرسوم",
+      "description": "يعتمد هيكل الرسوم على نوع الدورة والجلسة. لدينا نوعان من الجلسات: أيام الأسبوع وعطلات نهاية الأسبوع."
     },
-    "subject3": {
-      "sub3Title": "GCSE دروس رياضيات وإنجليزي وعلوم",
-      "weekdays3": {
-        "dayPerHour3": "£6.25<sm>/في الساعة</sm>",
-        "dayPerMonth3": "£120<sm>/في الشهر</sm>",
-        "dayDays3": "الأربعاء - الخميس",
-        "dayDuration3": "٥ - ٧م"
-      },
-      "weekends3": {
-        "endPerHour3": "£5<sm>/في الساعة</sm>",
-        "endPerMonth3": "£100<sm>/في الشهر</sm>",
-        "endDays3": "السبت - الأحد",
-        "endDuration3": "١٠ص - ١٢م / ١٠ص - ١م"
-      }
-    },
-    "subject4": {
-      "sub4Title": "تحفيظ (حفظ القرآن)",
-      "weekdays4": {
-        "dayPerHour4": "£1.85<sm>/في الساعة</sm>",
-        "dayPerMonth4": "£90<sm>/في الشهر</sm>",
-        "dayDays4": "الاثنين - الخميس",
-        "dayDuration4": "٤:٣٠ - ٧م / ٥ - ٧م"
-      },
-      "weekends4": {
-        "endPerHour4": "£2<sm>/في الساعة</sm>",
-        "endPerMonth4": "£60<sm>/في الشهر</sm>",
-        "endDays4": "السبت - الأحد",
-        "endDuration4": "١٠ص - ١م / ١٢ - ٢:٣٠م"
-      }
-    },
-    "subject5": {
-      "sub5Title": "اللغة العربية",
-      "weekdays5": {
-        "dayPerHour5": "£1.66<sm>/في الساعة</sm>",
-        "dayPerMonth5": "£60<sm>/في الشهر</sm>",
-        "dayDays5": "الاثنين - الخميس",
-        "dayDuration5": "٦ - ٧م"
-      },
-      "weekends5": {
-        "endPerHour5": "£10<sm>/في الساعة</sm>",
-        "endPerMonth5": "£50<sm>/في الشهر</sm>",
-        "endDays5": "السبت - الأحد",
-        "endDuration5": "١٠ص - ١٢:٣٠م / ١٢:٣٠ - ٢:٣٠م"
-      }
+    "holidays": {
+      "title": "العطل والتقويم الأكاديمي",
+      "description": "تعتمد العطل والتقويم الأكاديمي على نوع الجلسة. لدينا نوعان من الجلسات: أيام الأسبوع وعطلات نهاية الأسبوع."
     }
   },
-  "marquee": {
-    "text1": "حائز على جوائز",
-    "text2": "شهادات مرشحة",
-    "text3": "امتحان منتصف الفصل 2025"
+
+  "whyChooseUs": {
+    "mainHeading": "الخيار الأفضل للأطفال",
+    "sectionTitle": "لماذا تختارنا",
+    "features": {
+      "teachingTools": "أدوات تعليمية حديثة",
+      "smallGroups": "مجموعات صغيرة، تركيز أفضل",
+      "progressUpdates": "تحديثات منتظمة للتقدم",
+      "termlyReports": "تقارير فصلية للآباء",
+      "quranTajweed": "تعليم القرآن مع التجويد",
+      "friendlyEnvironment": "بيئة ممتعة وودية"
+    }
   },
+
+  "feeStructure": {
+    "mainHeading": "أكاديمية اليقين<break />الصفوف وهيكل الرسوم",
+    "sectionTitle": "الصفوف وهيكل الرسوم",
+    "tableHeaders": {
+      "subject": "المادة",
+      "weekdays": "صفوف أيام الأسبوع",
+      "weekends": "صفوف عطلة نهاية الأسبوع"
+    },
+    "subjects": [
+      {
+        "title": "القاعدة، القرآن والدراسات الإسلامية",
+        "weekdays": {
+          "perHour": "£1.85<sm>/في الساعة</sm>",
+          "perMonth": "£50<sm>/في الشهر</sm>",
+          "days": "الاثنين - الخميس",
+          "duration": "٤:٣٠ - ٦:٠٠م / ٥:٤٥ - ٧:١٥م"
+        },
+        "weekends": {
+          "perHour": "£1.70<sm>/في الساعة</sm>",
+          "perMonth": "£50<sm>/في الشهر</sm>",
+          "days": "السبت - الأحد",
+          "duration": "١٠ص - ١٢:٣٠م / ١٢:٣٠ - ٢:٣٠م"
+        }
+      },
+      {
+        "title": "دروس رياضيات وإنجليزي للمرحلة الابتدائية",
+        "weekdays": {
+          "perHour": "£5<sm>/في الساعة</sm>",
+          "perMonth": "£100<sm>/في الشهر</sm>",
+          "days": "الاثنين - الثلاثاء",
+          "duration": "٥ - ٧م"
+        },
+        "weekends": {
+          "perHour": "£4.44<sm>/في الساعة</sm>",
+          "perMonth": "£80<sm>/في الشهر</sm>",
+          "days": "السبت - الأحد",
+          "duration": "١٠ص - ١٢م"
+        }
+      },
+      {
+        "title": "GCSE دروس رياضيات وإنجليزي وعلوم",
+        "weekdays": {
+          "perHour": "£6.25<sm>/في الساعة</sm>",
+          "perMonth": "£120<sm>/في الشهر</sm>",
+          "days": "الأربعاء - الخميس",
+          "duration": "٥ - ٧م"
+        },
+        "weekends": {
+          "perHour": "£5<sm>/في الساعة</sm>",
+          "perMonth": "£100<sm>/في الشهر</sm>",
+          "days": "السبت - الأحد",
+          "duration": "١٠ص - ١٢م / ١٠ص - ١م"
+        }
+      },
+      {
+        "title": "تحفيظ (حفظ القرآن)",
+        "weekdays": {
+          "perHour": "£1.85<sm>/في الساعة</sm>",
+          "perMonth": "£90<sm>/في الشهر</sm>",
+          "days": "الاثنين - الخميس",
+          "duration": "٤:٣٠ - ٧م / ٥ - ٧م"
+        },
+        "weekends": {
+          "perHour": "£2<sm>/في الساعة</sm>",
+          "perMonth": "£60<sm>/في الشهر</sm>",
+          "days": "السبت - الأحد",
+          "duration": "١٠ص - ١م / ١٢ - ٢:٣٠م"
+        }
+      },
+      {
+        "title": "اللغة العربية",
+        "weekdays": {
+          "perHour": "£1.66<sm>/في الساعة</sm>",
+          "perMonth": "£60<sm>/في الشهر</sm>",
+          "days": "الاثنين - الخميس",
+          "duration": "٦ - ٧م"
+        },
+        "weekends": {
+          "perHour": "£10<sm>/في الساعة</sm>",
+          "perMonth": "£50<sm>/في الشهر</sm>",
+          "days": "السبت - الأحد",
+          "duration": "١٠ص - ١٢:٣٠م / ١٢:٣٠ - ٢:٣٠م"
+        }
+      }
+    ]
+  },
+
+  "marquee": {
+    "highlightAchievement": "حائز على جوائز متميزة",
+    "certificateRecognition": "حاصل على شهادات معترف بها",
+    "examAnnouncement": "امتحان منتصف الفصل 2025 – استعد الآن!"
+  },
+
   "certificate": {
     "category1": "الفئة 1",
     "category2": "الفئة 2",
@@ -179,12 +202,12 @@
     "teamPost11": "مدرسة اللغة العربية"
   },
   "testimonialOne": {
-    "heading1": "كلمات أولياء الأمور هي<<break />مفتاح سعادة الأطفال",
-    "heading2": "آراء وتوصيات"
+    "mainHeading": "كلمات أولياء الأمور هي<<break />مفتاح سعادة الأطفال",
+    "sectionTitle": "آراء وتوصيات"
   },
   "testimonialTwo": {
-    "heading1": "كلمات أولياء الأمور هي<break />مفتاح سعادة الأطفال",
-    "heading2": "آراء وتوصيات",
+    "mainHeading": "كلمات أولياء الأمور هي<break />مفتاح سعادة الأطفال",
+    "sectionTitle": "آراء وتوصيات",
     "testimonial1": {
       "review1": "أُقدّر مرونة أكاديمية اليقين. طفلي يتعلم وفقًا لسرعته الخاصة، وهذا فعال جدًا.",
       "author1": "أحمد علي المنصوري"
@@ -223,8 +246,8 @@
     }
   },
   "cta": {
-    "heading1": "انضم إلينا وكن جزءًا من <break /> دورتنا الأخيرة. <break /> التسجيلات مفتوحة.",
-    "heading2": "احصل على تعليمك المتميز",
+    "mainHeading": "انضم إلينا وكن جزءًا من <break /> دورتنا الأخيرة. <break /> التسجيلات مفتوحة.",
+    "sectionTitle": "احصل على تعليمك المتميز",
     "applyBtn": "قدّم الآن"
   },
   "blogs": {
@@ -262,26 +285,30 @@
   "instagram": {
     "follow": "تابعنا على إنستغرام"
   },
+
   "services": {
-    "heading1": "خدمات إضافية من أكاديمية اليقين",
-    "heading2": "خدمات إضافية",
-    "AllServiceBtn": "جميع الخدمات",
-    "service1": {
-      "title1": "التعلم عبر الإنترنت",
-      "description1": "نعلم جميعًا التأثير الذي تركه كوفيد-19 على تعليم الأطفال..."
-    },
-    "service2": {
-      "title2": "النكاح",
-      "description2": "الشيخ خالد أجرى العديد من عقود النكاح خلال السنوات العشر الماضية..."
-    },
-    "service3": {
-      "title3": "نادي الرياضة",
-      "description3": "في أكاديمية اليقين، يلعب الطلاب كرة القدم. كما يوجد لدينا نادي كريكيت..."
-    }
+    "mainHeading": "خدمات إضافية من أكاديمية اليقين",
+    "sectionTitle": "خدمات إضافية",
+    "allServicesButtonText": "جميع الخدمات",
+    "servicesList": [
+      {
+        "title": "التعلم عبر الإنترنت",
+        "description": "نعلم جميعًا التأثير الذي تركه كوفيد-19 على تعليم الأطفال..."
+      },
+      {
+        "title": "النكاح",
+        "description": "الشيخ خالد أجرى العديد من عقود النكاح خلال السنوات العشر الماضية..."
+      },
+      {
+        "title": "نادي الرياضة",
+        "description": "في أكاديمية اليقين، يلعب الطلاب كرة القدم. كما يوجد لدينا نادي كريكيت..."
+      }
+    ]
   },
+
   "activities": {
-    "heading1": "دعونا نعرفكم عن قراءتنا وثقافتنا",
-    "heading2": "أفضل أنشطتنا",
+    "mainHeading": "دعونا نعرفكم عن قراءتنا وثقافتنا",
+    "sectionTitle": "أفضل أنشطتنا",
     "exploreBtn": "اكتشف المزيد",
     "call": "اتصل بنا الآن"
   }
