180425 review form added

--- a/public/locales/ar/home.json
+++ b/public/locales/ar/home.json
@@ -309,7 +309,7 @@
   "activities": {
     "mainHeading": "دعونا نعرفكم عن قراءتنا وثقافتنا",
     "sectionTitle": "أفضل أنشطتنا",
-    "exploreBtn": "اكتشف المزيد",
+    "submitBtn": "مشاركة التعليقات",
     "call": "اتصل بنا الآن"
   }
 }
