--- a/public/locales/en/home.json
+++ b/public/locales/en/home.json
@@ -307,7 +307,7 @@
   "activities": {
     "mainHeading": "Let Us Know About Our Reading And Cultural",
     "sectionTitle": "Our Best Activities",
-    "exploreBtn": "Explore More",
+    "submitBtn": "Share Feedback",
     "call": "Call Us Now"
   }
 }
