--- a/public/locales/ar/home.json
+++ b/public/locales/ar/home.json
@@ -93,7 +93,7 @@
         }
       },
       {
-        "title": "دروس رياضيات وإنجليزي للمرحلة الابتدائية",
+        "title": "الرياضيات واللغة الإنجليزية للمرحلة الابتدائية",
         "weekdays": {
           "perHour": "£5<sm>/في الساعة</sm>",
           "perMonth": "£100<sm>/في الشهر</sm>",
@@ -104,11 +104,11 @@
           "perHour": "£4.44<sm>/في الساعة</sm>",
           "perMonth": "£80<sm>/في الشهر</sm>",
           "days": "السبت - الأحد",
-          "duration": "١٠ص - ١٢م"
+          "duration": "١٠ص - ١٢م / ١٠ص - ١م"
         }
       },
       {
-        "title": "GCSE دروس رياضيات وإنجليزي وعلوم",
+        "title": "GCSE الرياضيات، اللغة الإنجليزية والعلوم",
         "weekdays": {
           "perHour": "£6.25<sm>/في الساعة</sm>",
           "perMonth": "£120<sm>/في الشهر</sm>",
@@ -123,7 +123,7 @@
         }
       },
       {
-        "title": "تحفيظ (حفظ القرآن)",
+        "title": "تحفيظ القرآن",
         "weekdays": {
           "perHour": "£1.85<sm>/في الساعة</sm>",
           "perMonth": "£90<sm>/في الشهر</sm>",
@@ -149,7 +149,7 @@
           "perHour": "£10<sm>/في الساعة</sm>",
           "perMonth": "£50<sm>/في الشهر</sm>",
           "days": "السبت - الأحد",
-          "duration": "١٠ص - ١٢:٣٠م / ١٢:٣٠ - ٢:٣٠م"
+          "duration": "٩ - ١٠ص"
         }
       }
     ]
