site components fixed

--- a/public/locales/ar/common.json
+++ b/public/locales/ar/common.json
@@ -15,7 +15,7 @@
       "qaidahQuran": "القاعدة، القرآن والحفظ",
       "mathEnglish": "الرياضيات، الإنجليزية والعلوم",
       "arabicLanguage": "اللغة العربية",
-      "modernForeign": "اللغات الأجنبية الحديثة",
+      "modernForeign": "اللغة الأردية / البنغالية",
       "pages": "الصفحات",
       "news": "الأخبار والتحديثات",
       "ourSyllabus": "منهجنا",
