--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -15,7 +15,7 @@
       "qaidahQuran": "Qaidah, Quran & Hifdh",
       "mathEnglish": "Math, English & Science",
       "arabicLanguage": "Arabic Language",
-      "modernForeign": "Modern Foreign Languages",
+      "modernForeign": "Urdu / Bangla Language",
       "pages": "Pages",
       "news": "News & Updates",
       "ourSyllabus": "Our Syllabus",
