announcement feature added

--- a/public/locales/ar/common.json
+++ b/public/locales/ar/common.json
@@ -18,6 +18,7 @@
       "modernForeign": "اللغة الأردية / البنغالية",
       "pages": "الصفحات",
       "news": "الأخبار والتحديثات",
+      "announcements": "إعلانات",
       "ourSyllabus": "منهجنا",
       "academicCalendar": "التقويم الأكاديمي",
       "weekdays": "أيام الأسبوع",
