--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -18,6 +18,7 @@
       "modernForeign": "Urdu / Bangla Language",
       "pages": "Pages",
       "news": "News & Updates",
+      "announcements": "Announcements",
       "ourSyllabus": "Our Syllabus",
       "academicCalendar": "Academic Calendar",
       "weekdays": "Weekdays",
