added video and fixed announcement styles

--- a/public/locales/ar/home.json
+++ b/public/locales/ar/home.json
@@ -9,7 +9,7 @@
     "description": "قاعدة اللغة العربية والقرآن، الدراسات الإسلامية، الأدعية الأساسية وحفظ السور",
     "buttons": {
       "apply": "تقدم اليوم",
-      "timetable": "جدول صلاة شهر يناير",
+      "timetable": "جدول الصلاة",
       "playVideo": "تشغيل الفيديو"
     }
   },
@@ -27,15 +27,21 @@
     "programList": [
       {
         "title": "قاعدة عربية، القرآن والحفظ",
-        "description": "قال الله سبحانه وتعالى في القرآن: 'ورتل القرآن ترتيلاً'..."
+        "description": "قال الله سبحانه وتعالى في القرآن: 'ورتل القرآن ترتيلاً'...",
+        "daysPerWeek": "2-4 أيام",
+        "hoursPerWeek": "4-6 ساعات"
       },
       {
         "title": "الرياضيات، الإنجليزية والعلوم",
-        "description": "في أكاديمية اليقين لدينا مجموعة من المعلمين المتخصصين. يسعى معلمونا جاهدين إلى ..."
+        "description": "في أكاديمية اليقين لدينا مجموعة من المعلمين المتخصصين. يسعى معلمونا جاهدين إلى ...",
+        "daysPerWeek": "2 أيام",
+        "hoursPerWeek": "2-3 ساعات"
       },
       {
         "title": "اللغة العربية",
-        "description": "الإسلام ليس مجرد دين يتبعه المسلمون، بل هو أسلوب حياة. عندما يولد الإنسان..."
+        "description": "الإسلام ليس مجرد دين يتبعه المسلمون، بل هو أسلوب حياة. عندما يولد الإنسان...",
+        "daysPerWeek": "2 أيام",
+        "hoursPerWeek": "2-3 ساعات"
       }
     ]
   },
