session and fee structure details fixed

--- a/public/locales/ar/home.json
+++ b/public/locales/ar/home.json
@@ -125,7 +125,7 @@
           "perHour": "£5<sm>/في الساعة</sm>",
           "perMonth": "£100<sm>/في الشهر</sm>",
           "days": "السبت - الأحد",
-          "duration": "١٠ص - ١٢م / ١٠ص - ١م"
+          "duration": "١٠:٠٠ ص – ١٢:٣٠ م / ١٢:٣٠ – ٢:٣٠ م"
         }
       },
       {
@@ -155,7 +155,7 @@
           "perHour": "£10<sm>/في الساعة</sm>",
           "perMonth": "£50<sm>/في الشهر</sm>",
           "days": "السبت - الأحد",
-          "duration": "٩ - ١٠ص"
+          "duration": "٩:٠٠ – ١٠:٣٠ ص / ١٠:٣٠ – ١١:٣٠ ص"
         }
       }
     ]
